# ssrq-editio

./: .existdb.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Dockerfile.dev  README.md  abbr.html  agents.md  build.properties  build.xml  cantaloupe.properties  collection.xconf  controller.xql  data.config.json  docker-compose.dev.yml  docker-compose.yml  editio_config.toml  error-page.html  expath-pkg.xml  gulpfile.js  help.xml  index-copy.html  index.html  introduction.html  justfile  package-lock.json  package.json  partners.html  post-install.xql  pyproject.toml  repo.xml  search.html  tailwind.config.js  view-facs.html  view.html
.github/workflows/: main.yml  release_data.yml  test.yml  test_and_deploy.yml
_scripts/: make-kantone-sprite.sh
cli/: config.py  main.py
cli/bundle/: bundle.py  settings.py
cli/css/: handle.py
eXist_app/: api.json  collection.xconf  controller.xql  expath-pkg.xml  help.xml  index.xql  post-install.xql  views.json
modules/: config.xqm  create-biblstruct.xql  ext-common.xql  ext-common.xqm  ext-html.xql  ext-html.xqm  ext-latex.xql  ext-latex.xqm  get-bibl-ref.xql  get-keywords-from-header.xql  get-keywords.xql  id-search-json.xql  id-search.xql  id-search.xqm  index.xql  index.xqm  navigation.xql  navigation.xqm  pm-config.xql  pm-config.xqm  ssrq-helper.xqm  ssrq-lang.xqm  ssrq-rest.xql  ssrq-search.xql  ssrq-search.xqm  ssrq-static.xql  ssrq-util.xqm  ssrq.xql  ssrq.xqm  temp.xql  templates.xql  templates.xqm  utils.xqm  view.xql
routes/: abbr.html  index.html  introduction.html  partners.html  pdf.html  search.html  temp.html  view-facs.html  view.html  xml.html
static/: README.md
templates/: cantons.html  doc-table.html  facets.html  footer.html  head-facs.html  head.html  menu.html  page.html  search.html  toolbar.html  upload.html  volumes.html  works.html
test/: package.json  render.xql  suite.xql  transform.xql  wdio.conf.js
tests/: conftest.py  test-runner.xql  test-suite.xqm  test-utils.xqm  tests.xqm
transform/: ssrq-epub-main.xql  ssrq-epub-module.xql  ssrq-epub.xql  ssrq-latex-main.xql  ssrq-latex-module.xql  ssrq-latex.xql  ssrq-print-main.xql  ssrq-print-module.xql  ssrq-print.xql  ssrq-web-main.xql  ssrq-web-module.xql  ssrq-web.xql  tei_simplePrint-epub-main.xql  tei_simplePrint-epub-module.xql  tei_simplePrint-epub.xql  tei_simplePrint-latex-main.xql  tei_simplePrint-latex-module.xql  tei_simplePrint-latex.xql  tei_simplePrint-print-main.xql  tei_simplePrint-print-module.xql  tei_simplePrint-print.xql  tei_simplePrint-web-main.xql  tei_simplePrint-web-module.xql  tei_simplePrint-web.xql  tei_simplePrint.css  teipublisher-epub-main.xql  teipublisher-epub-module.xql  teipublisher-epub.xql  teipublisher-latex-main.xql  teipublisher-latex-module.xql  teipublisher-latex.xql  teipublisher-print-main.xql  teipublisher-print-module.xql  teipublisher-print.xql  teipublisher-web-main.xql  teipublisher-web-module.xql  teipublisher-web.xql
(+648 files in other folders)
