[project]
name = "ssrq-editio"
version = "0.0.1"
description = "The digital scholarly edition of the Swiss Law Sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi[standard]>=0.115.0"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "rust-just>=1.36.0",
]

[tool.mypy]
files = ["src"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
fix = true
line-length = 100
src = ["src", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
