[project]
name = "ssrq-editio"
version = "0.0.1"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "anyio>=4.6.0",
    "cachebox>=4.3.1",
    "fastapi[standard]>=0.115.0",
    "jinja2-fragments>=1.6.0",
    "jinjax>=0.48",
    "loguru>=0.7.2",
    "markdown>=3.7",
    "python-dotenv>=1.0.1",
    "saxonche>=12.5.0",
    "ssrq-utils",
    "typer>=0.12.5",
    "uvicorn>=0.31.0",
]

[project.scripts]
editio = "ssrq_editio.entrypoints.cli:app"

[tool.uv]
dev-dependencies = [
    "commitizen>=3.31.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "rust-just>=1.36.0",
    "sqlfluff>=3.2.5",
    "parsel>=1.9.1",
    "saxonche-stubs>=0.7.2",
    "watchfiles>=0.24.0",
]

[tool.uv.sources]
ssrq-utils = { git = "https://github.com/SSRQ-SDS-FDS/ssrq-utils.git", tag = "v0.5.0" }

[tool.mypy]
files = ["src"]
exclude = ["^src/ssrq_editio/services/xslt/scripts/convert/*$"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.ruff]
fix = true
line-length = 100
src = ["src", "tests"]
target-version = "py311"
extend-exclude = [
    "src/ssrq_editio/services/xslt/scripts/convert/**/*.py",
    ".dependencies",
]

[tool.ruff.lint]
select = ["C90", "E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
